# cryptographer

./: .eslintrc.js  .gitignore  .npmignore  .npmignore.backup  .prettierrc.js  .releaserc.js  API_REFERENCE.md  CHANGELOG.md  CONTRIBUTING.md  DEBUG_SUMMARY.md  DOCS.md  LICENSE  PUBLISHING.md  README.md  SECURITY.md  package-lock.json  package.json  test.js  tsconfig.json
.github/: dependabot.yml
.github/workflows/: ci.yml  codeql.yml  security.yml
benchmark/: package.json
benchmark/src/: index.ts
crates/blake2_wasm/: Cargo.toml
crates/blake2_wasm/src/: lib.rs
crates/blake3_wasm/: Cargo.toml
crates/blake3_wasm/src/: lib.rs  native.rs  wasm.rs
crates/cipher/3des_wasm/: Cargo.toml
crates/cipher/aes_wasm/: Cargo.toml
crates/cipher/aes_wasm/src/: lib.rs
crates/cipher/chacha20_wasm/: Cargo.toml
crates/cipher/chacha20_wasm/src/: lib.rs
crates/cipher/des_wasm/: Cargo.toml
crates/cipher/des_wasm/src/: lib.rs
crates/cipher/ecdh_wasm/: Cargo.toml
crates/cipher/ecdh_wasm/src/: lib.rs
crates/cipher/rsa_wasm/: Cargo.toml
crates/cipher/rsa_wasm/src/: lib.rs
crates/cipher/x25519_wasm/: Cargo.toml
crates/cipher/x25519_wasm/src/: lib.rs
crates/dsa/ecdsa_wasm/: Cargo.toml
crates/dsa/ecdsa_wasm/src/: lib.rs
crates/dsa/ed25519_wasm/: Cargo.toml
crates/dsa/ed25519_wasm/src/: lib.rs
crates/dsa/rsa_sign_wasm/: Cargo.toml
crates/dsa/rsa_sign_wasm/src/: lib.rs
crates/hmac/hmac_wasm/: Cargo.toml
crates/hmac/hmac_wasm/src/: lib.rs
crates/md4_wasm/: Cargo.toml
crates/md4_wasm/src/: lib.rs
crates/md5_wasm/src/: lib.rs
crates/pha/argon2_wasm/: Cargo.toml
crates/pha/argon2_wasm/src/: lib.rs
crates/pha/bcrypt_wasm/: Cargo.toml
crates/pha/bcrypt_wasm/src/: lib.rs
crates/pha/pbkdf2_wasm/: Cargo.toml
crates/pha/pbkdf2_wasm/src/: lib.rs
crates/ripemd160_wasm/: Cargo.toml
crates/ripemd160_wasm/src/: lib.rs
crates/sha/blake2_wasm/: Cargo.toml
crates/sha/blake2_wasm/src/: lib.rs
crates/sha/blake3_wasm/: Cargo.toml
crates/sha/blake3_wasm/src/: lib.rs
crates/sha/md4_wasm/: Cargo.toml
crates/sha/md4_wasm/src/: lib.rs
crates/sha/md5_wasm/: Cargo.toml
crates/sha/md5_wasm/src/: lib.rs
crates/sha/ripemd160_wasm/src/: lib.rs
crates/sha/sha1_wasm/: Cargo.toml
crates/sha/sha1_wasm/src/: lib.rs
crates/sha/sha2_wasm/: Cargo.toml
crates/sha/sha2_wasm/src/: lib.rs
crates/sha/sha3_wasm/src/: lib.rs
crates/sha/whirlpool_wasm/src/: lib.rs
crates/sha1_wasm/: Cargo.toml
crates/sha1_wasm/src/: lib.rs
crates/sha2_wasm/: Cargo.toml
crates/sha2_wasm/src/: lib.rs
crates/sha3_wasm/: Cargo.toml
crates/sha3_wasm/src/: lib.rs
crates/whirlpool_wasm/: Cargo.toml
crates/whirlpool_wasm/src/: lib.rs
docs/: README.md  SUMMARY.md  book.json  gitbook-setup.md
docs/api-reference/: cipher-functions.md  dsa-functions.md  hash-functions.md  hmac-functions.md  kdf-functions.md  zk-functions.md
docs/examples/: basic-usage.md
docs/getting-started/: installation.md  quick-start.md
docs/performance/: benchmarks.md
docs/security/: best-practices.md
examples/: README.md  basic-usage.js  file-encryption.js  password-hashing.js  working-example.js
scripts/: build.sh  clean.sh  copy.sh  fix-wasm-paths.js
src/: index.js  index.ts
src/cipher/: index.ts
src/cipher/aes_wasm/: aes_wasm.d.ts  aes_wasm.js  aes_wasm_bg.wasm.d.ts  package.json
src/cipher/chacha20_wasm/: chacha20_wasm.d.ts
src/cipher/des_wasm/: des_wasm.d.ts
src/dsa/: index.ts
src/hash/: index.ts
src/hmac/: index.ts
src/hmac/hmac_wasm/: hmac_wasm.d.ts  hmac_wasm.js  hmac_wasm_bg.wasm.d.ts  package.json
src/kdf/: index.ts
src/types/: index.d.ts  index.ts
src/utils/: validation.ts
src/zk/: groth16.ts  index.ts
test-crt/: run-tests.js  run-tests.ts
tests/: .gitignore  README.md  package-lock.json  package.json  run-all.js  run-tests.js  run-tests.ts
tests/src/: index.ts
