[package]
name = "whirlpool_wasm"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
whirlpool = "0.10.4"
wasm-bindgen = { version = "0.2", optional = true }
js-sys = { version = "0.3.72", optional = true }

[features]
default = []
wasm = ["wasm-bindgen", "js-sys"]

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true

[package.metadata.wasm-pack.profile.release]
wasm-opt = false