[package]
name = "des_wasm"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
des = { version = "0.8", default-features = false }
cbc = { version = "0.1" }
ctr = { version = "0.9", default-features = false, features = ["alloc"] }
wasm-bindgen = { version = "0.2.100", optional = true }
js-sys = { version = "0.3.72", optional = true }
serde = { version = "1.0.219", features = ["derive"], optional = true }
serde-wasm-bindgen = { version = "0.6.5", optional = true }

[features]
default = []
wasm = ["wasm-bindgen", "js-sys", "serde", "serde-wasm-bindgen"]

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true

[package.metadata.wasm-pack.profile.release]
wasm-opt = false
