[package]
name = "rsa_sign_wasm"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
rsa = { version = "0.9", default-features = false, features = ["sha2"] }
sha2 = { version = "0.10", default-features = false }
pkcs1 = { version = "0.7", default-features = false, features = ["alloc"] }
pkcs8 = { version = "0.10", default-features = false, features = ["alloc"] }
spki = { version = "0.7", default-features = false, features = ["alloc"] }
rand = { version = "0.8", default-features = false, features = ["getrandom"], optional = true }
getrandom = { version = "0.2", features = ["js"], optional = true }
serde = { version = "1.0.219", features = ["derive"] }
serde-wasm-bindgen = { version = "0.6.5" }
wasm-bindgen = { version = "0.2.100" }
js-sys = { version = "0.3.72" }
rand_core = { version = "0.6", features = ["getrandom"] }

[features]
default = []
wasm = ["rand", "getrandom"]

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true

[package.metadata.wasm-pack.profile.release]
wasm-opt = false

