[package]
name = "hmac_wasm"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
hmac = "0.12.1"
digest = "0.10.7"
md4 = "0.10.2"
md-5 = "0.10.6"
ripemd = "0.1.3"
sha1 = "0.10.6"
sha2 = "0.10.9"
sha3 = "0.10.8"
whirlpool = "0.10.4"
wasm-bindgen = { version = "0.2.100", optional = true }
js-sys = { version = "0.3.72", optional = true }
serde = { version = "1.0.219", features = ["derive"], optional = true }
serde-wasm-bindgen = { version = "0.6.5", optional = true }

[features]
default = []
wasm = ["wasm-bindgen", "js-sys", "serde", "serde-wasm-bindgen"]

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true

[package.metadata.wasm-pack.profile.release]
wasm-opt = false